--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node server/server.js",
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch":"nodemon --exec 'npm test'"
-
+    "test-watch": "nodemon --exec 'npm test'"
   },
-  "engines":{
-    "node":"8.6.0"
+  "engines": {
+    "node": "8.6.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
     "mongodb": "^2.2.5",
     "mongoose": "^4.13.4"
   },
